// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`print the initial state 1`] = `
ChangePassword {
  "context": undefined,
  "handleChange": [Function],
  "handleSubmit": [Function],
  "props": undefined,
  "refs": Object {},
  "state": Object {
    "newPassword": "",
    "password": "",
  },
  "updater": Object {
    "enqueueForceUpdate": [Function],
    "enqueueReplaceState": [Function],
    "enqueueSetState": [Function],
    "isMounted": [Function],
  },
}
`;

exports[`print the state 1`] = `
ChangePassword {
  "context": undefined,
  "handleChange": [Function],
  "handleSubmit": [Function],
  "props": Object {
    "newPassword": "1234test",
    "password": "test1234",
  },
  "refs": Object {},
  "state": Object {
    "newPassword": "",
    "password": "",
  },
  "updater": Object {
    "enqueueForceUpdate": [Function],
    "enqueueReplaceState": [Function],
    "enqueueSetState": [Function],
    "isMounted": [Function],
  },
}
`;
